--- a/webportfolio/pages/index.html
+++ b/webportfolio/pages/index.html
@@ -206,8 +206,7 @@
         <div class="footer-content">
             <div class="footer-section footer-brand">
                 <h3>risto toivanen</h3>
-                <p>full stack developer focused on creating efficient, scalable solutions. always learning, always
-                    building.</p>
+                <p>Second-year student at Sakky in Kuopio, studying software development. Developing practical skills in programming and software design.</p>
                 <div class="social-links">
                     <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
                     <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
@@ -221,6 +220,7 @@
                     <li><a href="#about">about</a></li>
                     <li><a href="#projects">work</a></li>
                     <li><a href="#contact">contact</a></li>
+                    <li><a href="readmore.html">Read more</a></li>
                 </ul>
             </div>
             <div class="footer-section">
