--- a/webportfolio/index.html
+++ b/webportfolio/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Risto Toivanen - Web Developer</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../style/main.css">
+    <link rel="stylesheet" href="style/main.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
     <section class="about" id="about">
         <div class="container">
             <div class="branch-svg-container">
-                <img src="../img/branch.svg" alt="">
+                <img src="img/branch.svg" alt="">
             </div>
             <div class="about-content">
                 <div class="about-text">
@@ -74,7 +74,7 @@
                 <div class="about-stats">
                     <div class="profile-image">
                         <div class="profile-circle">
-                            <img src="../img/your-profile-image.jpg" alt="Risto Toivanen">
+                            <img src="img/your-profile-image.jpg" alt="Risto Toivanen">
                         </div>
                     </div>
                     <div class="stats-container">
@@ -220,7 +220,7 @@
                     <li><a href="#about">about</a></li>
                     <li><a href="#projects">work</a></li>
                     <li><a href="#contact">contact</a></li>
-                    <li><a href="readmore.html">Read more</a></li>
+                    <li><a href="pages/readmore.html">Read more</a></li>
                 </ul>
             </div>
             <div class="footer-section">
@@ -238,7 +238,7 @@
         </div>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
